# Linfer

./: CMakeLists.txt  README.md  README_EN.md  config.yaml  main.cpp
apps/: app_mot.cpp  app_rtdetr.cpp  app_seg.cpp  app_yolo.cpp  app_yolop.cpp  app_yolov10.cpp
workspace/: compile_engine.sh
